clusters/base/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    azure.workload.identity/use: "true"
